<resources>
    <string name="app_name">래브라도 리트리버</string>
    <string name="login_button_text">로그인</string>
    <string name="logout_button_text">로그아웃</string>
    <string name="voice_search">음성검색</string>
    <string name="email_hint">이메일 주소를 입력하세요</string>
    <string name="password_hint">비밀번호를 입력하세요.</string>
    <string name="hint_password">비밀번호</string>
    <string name="back_button_text">뒤로 가기</string>
    <string name="hint_password_confirmation">비밀번호 확인</string>
    <string name="hint_name">이름</string>
    <string name="hint_birthdate">생년월일 (yyyy-mm-dd)</string>
    <string name="voice_guidance">음성 안내 허용</string>
    <string name="next_button">다음</string>
    <string name="btn_check_text">확인</string>
    <string name="btn_check_description">확인 버튼: 현재 설정 확인</string>
    <string name="btn_previous_description">이전 으로</string>
    <string name="visual_text">시각</string>
    <string name="non_visual_text">비시각</string>
    <string name="male_text">남자</string>
    <string name="female_text">여자</string>
    <string name="pregnant_text">임신</string>
    <string name="non_pregnant_text">비임신</string>
    <string name="voice_on_text">음성 ON</string>
    <string name="voice_off_text">음성 OFF</string>
    <string name="modify_info_text">정보 수정</string>
    <string name="sign_up">회원 가입</string>
    <string name="register_button_text">회원가입</string>
    <string name="voice_recognition_button_text">음성검색</string>
    <string name="my_text">음성인식결과</string>
    <string name="male_button_description">남성 토글 버튼</string>
    <string name="on_text">ON</string>
    <string name="off_text">OFF</string>
    <string name="switch_text">음성 ON/OFF</string>
    <string name="greeting">back</string>
    <string name="TEST_STRINGRESOURCE1">의약품 추가</string>
    <string name="TEST_STRINGRESOURCE2">next</string>
    <string name="TEST_STRINGRESOURCE3">의약품을 검색하세요.</string>
    <string name="TEST_STRINGRESOURCE4">의약품 정보1</string>
    <string name="TEST_STRINGRESOURCE5">의약품 정보2</string>
    <string name="TEST_STRINGRESOURCE6">+ 의약품 추가</string>
    <string name="TEST_STRINGRESOURCE7">- 의약품 삭제</string>
    <string name="TEST_STRINGRESOURCE8">입력 확인</string>
    <string name="app__name">My Application2</string>
    <string name="greeting2">back</string>
    <string name="btn_infor_modify_complte">정보수정 완료</string>
    <string name="user_information">회원정보</string>
    <string name="user_name">이름</string>
    <string name="user_age">나이</string>
    <string name="user_gender">성별</string>
    <string name="user_illness_information">질병 정보</string>
    <string name="btn_med_add">의약품 추가</string>
    <string name="btn_infor_modify">정보 수정</string>
    <string name="btn_voice_search">음성 검색</string>
    <string name="my_button_text">"나의 정보"</string>
    <string name="greeting1">back</string>
    <string name="TEST_STRINGRESOURCE9">검색 결과</string>
    <string name="TEST_STRINGRESOURCE10">의약품 이름</string>
    <string name="TEST_STRINGRESOURCE11">제조사</string>
    <string name="TEST_STRINGRESOURCE12">정보 확인</string>
    <string name="TEST_STRINGRESOURCE13">정보 확인중</string>
    <string name="TEST_STRINGRESOURCE14">용법 용량</string>
    <string name="TEST_STRINGRESOURCE15">주의 사항</string>
    <string name="TEST_STRINGRESOURCE16">알림 설정</string>
    <string name="TEST_STRINGRESOURCE17">알림 지정</string>
    <string name="TEST_STRINGRESOURCE18">알림 취소</string>
    <string name="TEST_STRINGRESOURCE19">time</string>
    <string name="TEST_STRINGRESOURCE20">알림 시작</string>
    <string name="TEST_STRINGRESOURCE21">날짜 설정</string>
    <string name="TEST_STRINGRESOURCE22">시간 설정</string>
    <string name="TEST_STRINGRESOURCE23">예약 완료</string>
    <string name="TEST_STRINGRESOURCE24">0000년00월00일 00시 00분00초</string>
    <string name="formatted_date">%1$d년 %2$d월 %3$d일</string>
    <string name="formatted_date2">%1$d시 %2$d분</string>
    <string name="formatted_date3">%1$d년 %2$d월 %3$d일 %4$d시 %5$d분</string>
    <string name="detailText">상세정보</string>
    <string name="textview3String">* 품목명 </string>
    <string name="textViewString">helloworld</string>
    <string name="textViewstr">helloworld</string>
    <string name="api_key">aXv7rCgtp36oSyV4Zf6txIR%2FkMVc6ok3Z%2FGRpwjZRF4Nty5Eug0WLB5bLhHU%2Bmz9edIPy78I4TLqPGiddzBO2Q%3D%3D</string>


</resources>
