<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF">

    <!-- "뒤로 가기" 버튼 -->
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFC107"
        android:text="@string/back_button_text"
        android:textColor="#000000"
        android:textSize="16sp"/>

    <!-- 제목: 회원가입 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up"
        android:textColor="#0B0A0A"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <!-- 구분선 -->
    <View
        android:layout_width="wrap_content"
        android:layout_height="7dp"
        android:background="#FFC107"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <!-- 아이디 입력 필드 -->
    <EditText
        android:id="@+id/ent_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/material_dynamic_neutral90"
        android:ems="10"
        android:autofillHints="username"
        android:layout_marginBottom="20dp"/>

    <!-- 비밀번호 입력 필드 -->
    <EditText
        android:id="@+id/ent_pw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:backgroundTint="@color/material_dynamic_neutral90"
        android:ems="10"
        android:autofillHints="password"
        android:layout_marginBottom="20dp"/>

    <!-- 비밀번호 확인 입력 필드 -->
    <EditText
        android:id="@+id/ent_pw2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_password_confirmation"
        android:inputType="textPassword"
        android:backgroundTint="@color/material_dynamic_neutral90"
        android:ems="10"
        android:autofillHints="passwordConfirmation"
        android:layout_marginBottom="20dp"/>

    <!-- 이름 입력 필드 -->
    <EditText
        android:id="@+id/ent_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:backgroundTint="@color/material_dynamic_neutral90"
        android:ems="10"
        android:autofillHints="name"
        android:layout_marginBottom="20dp"/>

    <!-- 생년월일 입력 필드 -->
    <EditText
        android:id="@+id/ent_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_birthdate"
        android:inputType="date"
        android:backgroundTint="@color/material_dynamic_neutral90"
        android:ems="10"
        android:autofillHints="birthDate"
        android:layout_marginBottom="20dp"/>

    <!-- "다음" 버튼 -->
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FCC721"
        android:text="@string/next_button"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"/>
</LinearLayout>
