<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEC921">

    <!-- 로고 및 앱 이름 -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="199dp"
        android:layout_height="206dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="98dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/labrador"/>

    <Button
        android:id="@+id/startVoiceRecognitionButton"
        android:layout_width="241dp"
        android:layout_height="74dp"
        android:layout_below="@id/logoImageView"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="76dp"
        android:background="@drawable/button_background"
        android:text="@string/voice_search"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="241dp"
        android:layout_height="74dp"
        android:layout_below="@id/logoImageView"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="74dp"
        android:background="@drawable/button_background"
        android:text="@string/login_button_text"
        android:textSize="34sp"
        android:textStyle="bold" />
</RelativeLayout>
